# beefocus

./: .travis.yml  CMakeLists.txt  Info.plist  Nodes.xml  README.md  TODO.md  Tokens.xml  annotated.html  annotated_dup.js  classes.html  dir_000001_000000.html  dir_000002_000000.html  dir_3de43714fdf5cedb1a5dc5f30ad15540.html  dir_3de43714fdf5cedb1a5dc5f30ad15540.js  dir_3de43714fdf5cedb1a5dc5f30ad15540_dep.dot  dir_3de43714fdf5cedb1a5dc5f30ad15540_dep.md5  dir_d9edf6c004b4a7ff14fe9ae7a92214ee.html  dir_d9edf6c004b4a7ff14fe9ae7a92214ee.js  dir_e7c608ee7a349a990cecd74a7d13d4b1.html  dir_e7c608ee7a349a990cecd74a7d13d4b1.js  dir_e7c608ee7a349a990cecd74a7d13d4b1_dep.dot  dir_e7c608ee7a349a990cecd74a7d13d4b1_dep.md5  doxygen.err  files.html  files.js  functions.html  functions_0x7e.html  functions_c.html  functions_d.html  functions_dup.js  functions_e.html  functions_enum.html  functions_f.html  functions_func.html  functions_g.html  functions_h.html  functions_i.html  functions_l.html  functions_m.html  functions_n.html  (+59 more)
boards/eagle_libraries/: RepRapjr_license.md  SparkFun-Connectors_license.md  glowmouse_custom.lbr  glowmouse_custom_license.md
boards/nema_14_b0/: beefocus.brd  beefocus.pro  beefocus.sch  eagle.epf
boards/nema_14_b1/: beefocus.brd  beefocus.pro  beefocus.sch
d0/d0e/: class_focuser_state.html  class_focuser_state.js
d0/d15/: hardware__esp8266_8cpp__incl.dot  hardware__esp8266_8cpp__incl.md5
d0/d34/: struct_enum_hash.html  struct_enum_hash.js
d0/d38/: class_h_w_mock_timed-members.html
d0/d57/: class_wifi_interface_ethernet__coll__graph.dot  class_wifi_interface_ethernet__coll__graph.md5
d0/d60/: class_debug_interface_sim__coll__graph.dot  class_debug_interface_sim__coll__graph.md5
d0/d67/: class_net_interface-members.html
d0/d84/: class_wifi_interface_ethernet__inherit__graph.dot  class_wifi_interface_ethernet__inherit__graph.md5
d0/daa/: class_debug_e_s_p8266__inherit__graph.dot  class_debug_e_s_p8266__inherit__graph.md5
d0/dfb/: class_net_connection.html  class_net_connection.js
d1/d10/: class_f_s_1_1_focuser-members.html
d1/d28/: class_h_w_event-members.html
d1/d2c/: class_h_w_event.html  class_h_w_event.js
d1/d5d/: test__mock__debug_8h__incl.dot  test__mock__debug_8h__incl.md5
d1/d65/: class_f_s_1_1_state_arg-members.html
d1/d72/: class_debug_e_s_p8266.html  class_debug_e_s_p8266.js
d1/d8a/: wifi__debug__ostream_8h__dep__incl.dot  wifi__debug__ostream_8h__dep__incl.md5
d1/da5/: class_command_parser_1_1_command_template-members.html
d1/db0/: test__mock__event_8h__incl.dot  test__mock__event_8h__incl.md5
d1/dbe/: struct_f_s_1_1_state_stack_1_1_command_packet-members.html
d1/dc8/: simple__ostream_8h__incl.dot  simple__ostream_8h__incl.md5  structis__beefocus__ostream_3_01_net_interface_01_4__coll__graph.dot  structis__beefocus__ostream_3_01_net_interface_01_4__coll__graph.md5
d1/dc9/: debug__interface_8h__dep__incl.dot  debug__interface_8h__dep__incl.md5
d1/dd6/: class_f_s_1_1_timing_params-members.html
d1/df3/: hardware__interface_8cpp__incl.dot  hardware__interface_8cpp__incl.md5
d1/df6/: class_focuser_state_1_1_c_o_m_m_a_n_d___p_a_c_k_e_t.html  class_focuser_state_1_1_c_o_m_m_a_n_d___p_a_c_k_e_t.js
d2/d09/: debug__esp8266_8cpp__incl.dot  debug__esp8266_8cpp__incl.md5
d2/d15/: structis__beefocus__ostream_3_01_net_interface_01_4.html
d2/d40/: structis__beefocus__ostream_3_01_debug_interface_01_4__inherit__graph.dot  structis__beefocus__ostream_3_01_debug_interface_01_4__inherit__graph.md5
d2/d44/: class_command_parser_1_1_command_packet.html  class_command_parser_1_1_command_packet.js
d2/d6e/: net__interface_8h.html  net__interface_8h_source.html
d2/da4/: class_h_w_mock_timed__inherit__graph.dot  class_h_w_mock_timed__inherit__graph.md5
d2/db7/: command__parser_8cpp.html  command__parser_8cpp.js  command__parser_8cpp_source.html
d2/dcc/: namespace_bee_focus.html
d2/dd3/: namespace_f_s.html  namespace_f_s.js
d2/df5/: class_wifi_connection_ethernet.html  class_wifi_connection_ethernet.js
d2/df7/: focuser__state_8cpp__incl.dot  focuser__state_8cpp__incl.md5
d3/d4e/: debug__esp8266_8h.html  debug__esp8266_8h_source.html
d3/d54/: class_net_interface__inherit__graph.dot  class_net_interface__inherit__graph.md5
d3/d73/: class_h_w_i__inherit__graph.dot  class_h_w_i__inherit__graph.md5
d3/d82/: class_hardware_e_s_p8266__inherit__graph.dot  class_hardware_e_s_p8266__inherit__graph.md5
d3/da7/: class_wifi_ostream__coll__graph.dot  class_wifi_ostream__coll__graph.md5
d3/dad/: structis__beefocus__ostream_3_01_wifi_debug_ostream_01_4__inherit__graph.dot  structis__beefocus__ostream_3_01_wifi_debug_ostream_01_4__inherit__graph.md5
d3/dda/: class_hardware_e_s_p8266-members.html
d3/de6/: class_h_w_i.html  class_h_w_i.js
d3/df6/: structis__beefocus__ostream_3_01_wifi_connection_ethernet_01_4__inherit__graph.dot  (+1 more)
d4/d57/: hardware__interface_8h__incl.dot  (+1 more)
doc_config/: Doxyfile  doc_build.sh  doc_deploy.sh  doc_git_push.sh  doc_git_setup.sh  doc_view.sh
firmware/: basic_types.h  command_parser.cpp  command_parser.h  debug_esp8266.cpp  debug_esp8266.h  debug_interface.h  focuser_state.cpp  focuser_state.h  hardware_esp8266.cpp  hardware_esp8266.h  hardware_interface.cpp  hardware_interface.h  main.cpp  net_esp8266.cpp  net_esp8266.h  net_interface.h  simple_ostream.h  wifi_debug_ostream.h  wifi_ostream.h  wifi_secrets.h
firmware_sim/: main.cpp
indi_docs/: indi_usage_docs.md
search/: search.idx
travis-ci/: build-all.sh  build-simulator.sh  deps-arduino_sdk.sh  install-gtest.sh
unit_tests/: CMakeLists.txt  test_check_for_commands.cpp  test_device.cpp  test_focuser_state.cpp  test_focuser_trad.cpp  test_mock_debug.h  test_mock_event.h  test_mock_hardware.h  test_mock_net.h  test_mocks.h
utils/: dir_to_code.py
wifi_html/: configuration.html  gwd_workspace.json
(+269 files in other folders)
